--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,9 @@
 :root {
-	--font: Proxima Nova, sans-serif;
+	--proxima: Proxima Nova, sans-serif;
+	--red: #DC3D43;
+	--cream: #FEF8F2;
+	--black: #000;
+	--gray: #C8C3BE;
 }
 
 html {
@@ -11,7 +15,47 @@ html {
 }
 
 body {
-	font-family: Proxima Nova,sans-serif;
+	font-family: var(--proxima);
+	color: var(--black);
+	background: var(--cream);
+}
+
+h1, h2, h3 {
+	font-weight: 800;
+	text-transform: uppercase;
+}
+h1 {
+	font-size: 54px;
+	line-height: 63px;
+	letter-spacing: 15px;
+}
+
+h2 {
+	font-size: 42px;
+	line-height: 48px;
+	letter-spacing: 15px;
+}
+
+h3 {
+	font-size: 24px;
+	line-height: 31px;
+	letter-spacing: 5px;
+	color: var(--red);
+}
+
+p {
+	font-size: 19px;
 	font-weight: 400;
-	font-style: normal;
+	line-height: 28.5px;
+}
+
+.component img {
+	max-width: initial;
+}
+.component__img {
+	border: 1px solid var(--gray);
+	overflow-x: auto;
+}
+.component__code {
+	border: 1px solid var(--gray);
 }
