--- a/components/index.html
+++ b/components/index.html
@@ -4,8 +4,49 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Components | Articket Barcelona</title>
+	<link rel="stylesheet" href="https://use.typekit.net/hgr0xdu.css">
+	<link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-	<h1>Web components go here</h1>
+	<h1>Web components</h1>
+
+	<h2>Typography Defaults</h2>
+
+		<article class="component">
+			<h3 class="component__name">body</h3>
+			<div class="component__img">
+				<img 
+					srcset="img/bodytext@2x.png 1.3x"
+					src="img/bodytext@2x.png" 
+					alt="body copy"/>
+			</div>
+			<div class="component__code">
+				<p>The Fundació Joan Miró is a space that showcases the artist’s work alongside other contemporary pieces that help to maintain Joan Miró’s unique artistic legacy alive.</p>
+			</div>
+		</article>
+
+		<article class="component">
+			<h3 class="component__name">headings (h1, h2, h3)</h3>
+			<div class="component__img">
+				<img 
+					srcset="img/main_heading@2x.png 2x"
+					src="img/main_heading@2x.png" 
+					alt="h1"/>
+				<img 
+					srcset="img/section__heading@2x.png 2x"
+					src="img/section__heading@2x.png" 
+					alt="h2"/>
+				<img 
+					srcset="img/museum-card__title@2x.png 2x"
+					src="img/museum-card__title@2x.png" 
+					alt="h3"/>
+			</div>
+			<div class="component__code">
+				<h1>The best art museums in barcelona in one pass</h1>
+				<h2>Museums Included</h2>
+				<h3>Fundació Antoni Tàpies</h3>
+			</div>
+		</article>
+
 </body>
 </html>
