added purchase button

--- a/components/index.html
+++ b/components/index.html
@@ -48,5 +48,26 @@
 			</div>
 		</article>
 
+	<h2>Global Molecules</h2>
+
+		<article class="component">
+			<h3 class="component__name">Purchase Button</h3>
+			<div class="component__img">
+				<img 
+					srcset="img/button.purchase@2x.png 2x"
+					src="img/button.purchase@2x.png" 
+					alt="purchase button"/>
+				<img 
+					srcset="img/button.purchaseactive@2x.png 2x"
+					src="img/button.purchaseactive@2x.png" 
+					alt="purchase button active"/>
+			</div>
+			<div class="component__code">
+				<a class="purchasebutton" href="#!">Buy your articket</a>
+				<a class="purchasebutton purchasebutton--active" href="#!">Buy your articket</a>
+			</div>
+		</article>
+
+
 </body>
 </html>
