--- a/css/main.css
+++ b/css/main.css
@@ -14,48 +14,69 @@ html {
 	box-sizing: inherit;
 }
 
-body {
-	font-family: var(--proxima);
-	color: var(--black);
-	background: var(--cream);
-}
+/* TYPOGRAPHY DEFAULTS */
+	body {
+		font-family: var(--proxima);
+		color: var(--black);
+		background: var(--cream);
+	}
 
-h1, h2, h3 {
-	font-weight: 800;
-	text-transform: uppercase;
-}
-h1 {
-	font-size: 54px;
-	line-height: 63px;
-	letter-spacing: 15px;
-}
+	h1, h2, h3 {
+		font-weight: 800;
+		text-transform: uppercase;
+	}
+	h1 {
+		font-size: 54px;
+		line-height: 63px;
+		letter-spacing: 15px;
+	}
 
-h2 {
-	font-size: 42px;
-	line-height: 48px;
-	letter-spacing: 15px;
-}
+	h2 {
+		font-size: 42px;
+		line-height: 48px;
+		letter-spacing: 15px;
+	}
 
-h3 {
-	font-size: 24px;
-	line-height: 31px;
-	letter-spacing: 5px;
-	color: var(--red);
-}
+	h3 {
+		font-size: 24px;
+		line-height: 31px;
+		letter-spacing: 5px;
+		color: var(--red);
+	}
 
-p {
-	font-size: 19px;
-	font-weight: 400;
-	line-height: 28.5px;
-}
+	p {
+		font-size: 19px;
+		font-weight: 400;
+		line-height: 28.5px;
+	}
 
-.component img {
-	max-width: initial;
-}
-.component__img {
-	border: 1px solid var(--gray);
-	overflow-x: auto;
-}
-.component__code {
-	border: 1px solid var(--gray);
-}
+/* COMPONENT DEFAULTS */
+	.component img {
+		max-width: initial;
+	}
+	.component__img {
+		border: 1px solid var(--gray);
+		overflow-x: auto;
+	}
+	.component__code {
+		border: 1px solid var(--gray);
+	}
+
+/* CARDS + BUTTONS */
+	a.purchasebutton {
+		font-family: var(--proxima);
+		font-size: 21px;
+		line-height: 30px;
+		letter-spacing: 3px;
+		font-weight: 700;
+		text-decoration: none;
+		text-transform: uppercase;
+		color: var(--red);
+		border: 2px solid var(--red);
+		padding: 1rem;
+	}
+
+	a.purchasebutton--active {
+		color: var(--cream);
+		background: var(--red);
+	}
