added menu typography + buttons

--- a/components/index.html
+++ b/components/index.html
@@ -48,7 +48,20 @@
 			</div>
 		</article>
 
-	<h2>Global Molecules</h2>
+		<article class="component">
+			<h3 class="component__name">nav menu</h3>
+			<div class="component__img">
+				<img 
+					srcset="img/nav-bar__menu-item@2x.png 2x"
+					src="img/nav-bar__menu-item@2x.png" 
+					alt="nav-bar menu item"/>
+			</div>
+			<div class="component__code">
+				<a class="nav-menu" href="#!">Museums</a>
+			</div>
+		</article>
+
+	<h2>Buttons</h2>
 
 		<article class="component">
 			<h3 class="component__name">Purchase Button</h3>
@@ -68,6 +81,23 @@
 			</div>
 		</article>
 
+		<article class="nav-bar">
+			<h3 class="component__name">nav-bar</h3>
+			<div class="component__img">
+				<img 
+					srcset="img/nav-bar__menu-list@2x.png 2x"
+					src="img/nav-bar__menu-list@2x.png" 
+					alt="nav-bar menu list"/>
+				<img 
+					srcset="img/nav-bar__menu-item@2x.png 2x"
+					src="img/nav-bar__menu-item@2x.png" 
+					alt="nav-bar menu item"/>
+			</div>
+			<div class="component__code">
+				<a class="purchasebutton" href="#!">Buy your articket</a>
+				<a class="purchasebutton purchasebutton--active" href="#!">Buy your articket</a>
+			</div>
+		</article>
 
 </body>
 </html>
