--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@ html {
 		font-weight: 800;
 		text-transform: uppercase;
 	}
+
 	h1 {
 		font-size: 54px;
 		line-height: 63px;
@@ -44,11 +45,32 @@ html {
 		color: var(--red);
 	}
 
+	h4{
+		font-size: 27px;
+		line-height: 40px;
+		font-weight: 800;
+		color: var(--red);
+	}
+
 	p {
 		font-size: 19px;
 		font-weight: 400;
 		line-height: 28.5px;
 	}
+
+	a {
+		text-transform: uppercase;
+		text-decoration: none;
+		color: var(--black);
+	}
+
+	a.nav-menu {
+		font-size: 17px;
+		line-height: 24px;
+		letter-spacing: 2px;
+		font-weight: 400;
+	}
+
 
 /* COMPONENT DEFAULTS */
 	.component img {
@@ -69,8 +91,6 @@ html {
 		line-height: 30px;
 		letter-spacing: 3px;
 		font-weight: 700;
-		text-decoration: none;
-		text-transform: uppercase;
 		color: var(--red);
 		border: 2px solid var(--red);
 		padding: 1rem;
