--- a/components/index.html
+++ b/components/index.html
@@ -81,23 +81,77 @@
 			</div>
 		</article>
 
-		<article class="nav-bar">
+		<article class="component nav-bar">
 			<h3 class="component__name">nav-bar</h3>
 			<div class="component__img">
 				<img 
 					srcset="img/nav-bar__menu-list@2x.png 2x"
 					src="img/nav-bar__menu-list@2x.png" 
 					alt="nav-bar menu list"/>
-				<img 
-					srcset="img/nav-bar__menu-item@2x.png 2x"
-					src="img/nav-bar__menu-item@2x.png" 
-					alt="nav-bar menu item"/>
 			</div>
 			<div class="component__code">
-				<a class="purchasebutton" href="#!">Buy your articket</a>
-				<a class="purchasebutton purchasebutton--active" href="#!">Buy your articket</a>
+				<ul class="nav-bar__menu">
+					<li><a class="nav nav-menu" href="#!">Museums</a></li>
+					<li><a class="nav nav-menu" href="#!">how it works</a></li>
+					<li><a class="nav nav-menu" href="#!">routes</a></li>
+					<li><a class="nav nav-menu" href="#!">contact</a></li>
+				</ul>
+			</div>
+
+			<div class="component__img">
+				<img 
+					srcset="img/nav-bar__language-list@2x.png 2x"
+					src="img/nav-bar__language-list@2x.png" 
+					alt="nav-bar language list"/>
+			</div>
+			<div class="component__code">
+				<ul class="nav-bar__language">
+					<li><a class="nav nav--active" href="#!">en</a></li>
+					<li><a class="nav" href="#!">ca</a></li>
+					<li><a class="nav" href="#!">es</a></li>
+					<li><a class="nav" href="#!">fr</a></li>
+					<li><a class="nav" href="#!">it</a></li>
+					<li><a class="nav" href="#!">de</a></li>
+				</ul>
 			</div>
 		</article>
+	<h2>header</h2>
+		<article class="component">
+			<h3 class="component__name">header</h3>
+			<div class="component__img">
+				<img 
+					srcset="img/header@2x.png 2x"
+					src="img/header@2x.png" 
+					alt="header"/>
+			</div>
 
+			<div class="header">
+				<img 
+					class="logo"
+					srcset="img/logo@2x.png 2x"
+					src="img/logo@2x.png" 
+					alt="logo">
+				<div class="main_nav">
+					<ul class="nav-bar__menu">
+						<li><a class="nav nav-menu" href="#!">Museums</a></li>
+						<li><a class="nav nav-menu" href="#!">how it works</a></li>
+						<li><a class="nav nav-menu" href="#!">routes</a></li>
+						<li><a class="nav nav-menu" href="#!">contact</a></li>
+					</ul>
+				</div>
+				<div class="language_nav">
+					<ul class="nav-bar__language">
+						<li><a class="nav nav--active" href="#!">en</a></li>
+						<li><a class="nav" href="#!">ca</a></li>
+						<li><a class="nav" href="#!">es</a></li>
+						<li><a class="nav" href="#!">fr</a></li>
+						<li><a class="nav" href="#!">it</a></li>
+						<li><a class="nav" href="#!">de</a></li>
+					</ul>
+				</div>
+				<div class="purchasebutton">
+					<a class="purchasebutton" href="#!">Buy your articket</a>
+				</div>
+			</div>
 </body>
 </html>
