--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,22 @@ html {
 	box-sizing: inherit;
 }
 
+.component_section {
+	padding: 2rem 0;
+	border-top: 5px dotted var(--gray);
+}
+
+.sidebar {
+	width: 20%;
+	float: left;
+	position: fixed;
+	overflow: scroll;
+}
+
+.main {
+	width: 80%;
+	float: right;
+}
 /* TYPOGRAPHY DEFAULTS */
 	body {
 		font-family: var(--proxima);
@@ -45,7 +61,7 @@ html {
 		color: var(--red);
 	}
 
-	h4{
+	h4 {
 		font-size: 27px;
 		line-height: 40px;
 		font-weight: 800;
@@ -64,10 +80,10 @@ html {
 		color: var(--black);
 	}
 
-	a.nav {
+	a.nav, h5 {
 		font-size: 17px;
 		line-height: 24px;
-		letter-spacing: 2px;
+		letter-spacing: 5px;
 		font-weight: 400;
 		padding: 0 1.3rem;
 	}
@@ -114,6 +130,7 @@ html {
 	.nav-bar__menu {
 		display: flex;
 		list-style-type: none;
+		flex-shrink: 1;
 		padding: 0;
 		margin: 0;
 	}
