added sidebar links

--- a/components/index.html
+++ b/components/index.html
@@ -13,20 +13,18 @@
 	<div class="sidebar">
 		<article class="sidebar_section">
 			<h3 class="sidebar_heading">Typography Defaults</h3>
-				<h5><a class="sidebar_item" href="#!">body</a></h5>
-				<h5><a class="sidebar_item" href="#!">h1</a></h5>
-				<h5><a class="sidebar_item" href="#!">h2</a></h5>
-				<h5><a class="sidebar_item" href="#!">h3</a></h5>
-				<h5><a class="sidebar_item" href="#!">nav menu</a></h5>
+				<h5><a class="sidebar_item" href="#anchor_body">body</a></h5>
+				<h5><a class="sidebar_item" href="#anchor_headings">headings</a></h5>
+				<h5><a class="sidebar_item" href="#anchor_nav-menu">nav menu</a></h5>
 		</article>
 		<article class="sidebar_section">
 			<h3 class="sidebar_heading">buttons and navigation</h3>
-				<h5><a class="sidebar_item" href="#!">purchase button</a></h5>
-				<h5><a class="sidebar_item" href="#!">nav-bar</a></h5>
+				<h5><a class="sidebar_item" href="#anchor_button">purchase button</a></h5>
+				<h5><a class="sidebar_item" href="#anchor_nav-bar">nav-bar</a></h5>
 		</article>
 		<article class="sidebar_section">
 			<h3 class="sidebar_heading">header</h3>
-				<h5><a class="sidebar_item" href="#!">header</a></h5>
+				<h5><a class="sidebar_item" href="#anchor_header">header</a></h5>
 		</article>
 	</div>
 
@@ -35,7 +33,7 @@
 		<h2>Typography Defaults</h2>
 
 			<article class="component">
-				<h3 class="component__name">body</h3>
+				<h3 id="anchor_body" class="component__name">body</h3>
 				<div class="component__img">
 					<img 
 						srcset="img/bodytext@2x.png 1.3x"
@@ -48,7 +46,7 @@
 			</article>
 
 			<article class="component">
-				<h3 class="component__name">headings (h1, h2, h3)</h3>
+				<h3 id="anchor_headings" class="component__name">headings (h1, h2, h3)</h3>
 				<div class="component__img">
 					<img 
 						srcset="img/main_heading@2x.png 2x"
@@ -71,7 +69,7 @@
 			</article>
 
 			<article class="component">
-				<h3 class="component__name">nav menu</h3>
+				<h3 id="anchor_nav-menu" class="component__name">nav menu</h3>
 				<div class="component__img">
 					<img 
 						srcset="img/nav-bar__menu-item@2x.png 2x"
@@ -88,7 +86,7 @@
 		<h2>Buttons</h2>
 
 			<article class="component">
-				<h3 class="component__name">Purchase Button</h3>
+				<h3 id="anchor_button" class="component__name">Purchase Button</h3>
 				<div class="component__img">
 					<img 
 						srcset="img/button.purchase@2x.png 2x"
@@ -106,7 +104,7 @@
 			</article>
 
 			<article class="component nav-bar">
-				<h3 class="component__name">nav-bar</h3>
+				<h3 id="anchor_nav-bar" class="component__name">nav-bar</h3>
 				<div class="component__img">
 					<img 
 						srcset="img/nav-bar__menu-list@2x.png 2x"
@@ -144,7 +142,7 @@
 		<section class ="component_section">
 		<h2>header</h2>
 			<article class="component">
-				<h3 class="component__name">header</h3>
+				<h3 id="anchor_header" class="component__name">header</h3>
 				<div class="component__img">
 					<img 
 						srcset="img/header@2x.png 2x"
