--- a/css/main.css
+++ b/css/main.css
@@ -83,12 +83,12 @@ html {
 	a.nav, h5 {
 		font-size: 17px;
 		line-height: 24px;
-		letter-spacing: 5px;
+		letter-spacing: 2px;
 		font-weight: 400;
 		padding: 0 1.3rem;
 	}
 
-	.nav--active, h5:hover {
+	.nav:hover, h5:hover {
 		border-bottom: 2px solid var(--red);
 	}
 
@@ -108,7 +108,7 @@ html {
 		border: 1px solid var(--gray);
 	}
 
-/* CARDS + BUTTONS */
+/* BUTTONS */
 	a.purchasebutton {
 		font-family: var(--proxima);
 		font-size: 21px;
@@ -147,4 +147,29 @@ html {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
+	}
+
+/* CARDS */
+	.featured_icons {
+		list-style-type: none;
+		padding: 0 10% 0 0;
+		margin: 0 0 10%;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+	.icon__card {
+		display: flex;
+		align-items: center;
+	}
+
+	.i{
+		max-height: 100%;
+		padding: 0 1rem;
+	}
+
+	.t {
+		font-size: 1em;
+		line-height: 1em;
+		text-transform: uppercase;
 	}
