added museum card

--- a/components/index.html
+++ b/components/index.html
@@ -29,6 +29,7 @@
 		<article class="sidebar_section">
 			<h3 class="sidebar_heading">cards</h3>
 				<h5><a class="sidebar_item" href="#anchor_icon-card">icon card</a></h5>
+				<h5><a class="sidebar_item" href="#anchor_museum-card">museum card</a></h5>
 		</article>
 	</div>
 
@@ -206,6 +207,24 @@
 								</div>
 							</li>
 						</ul>
+				</article>
+
+				<article class="component">
+					<h3 id="anchor_museum-card" class="component__name">museum card</h3>
+					<div class="component__img">
+						<img 
+							srcset="img/museum-card@2x.png 2x"
+							src="img/museum-card@2x.png"
+							alt="museum card"/>
+					</div>
+					<div class="component__code">
+						<img 
+							srcset="img/museum-card__img@2x.png 2x"
+							src="img/museum-card__img@2x.png"
+							alt="fundacio antoni tapies">
+						<h3 class="museum__name">FUNDACIÓ ANTONI TÀPIES</h3>
+						<p class="museum__summary">The Fundació Antoni Tàpies was established to promote knowledge of modern art and houses one of the most complete public collections of Antoni Tàpies’ work.</p>
+					</div>
 				</article>
 		</section>
 	</div>
