adjust size for nav purchase button

--- a/components/index.html
+++ b/components/index.html
@@ -179,9 +179,14 @@
 							<li><a class="nav" href="#!">it</a></li>
 							<li><a class="nav" href="#!">de</a></li>
 						</ul>
+						<img 
+							class="dropbtn" 
+							src="dropbtn@2x.png"
+							srcset="dropbtn@2x.png 2x"
+							alt="">
 					</div>
 					<div class="purchasebutton">
-						<a class="purchasebutton" href="#!">Buy your articket</a>
+						<a class="purchasebutton purchasebutton--nav" href="#!">Buy your articket</a>
 					</div>
 				</div>
 			</div>
