language dropdown menu

--- a/components/index.html
+++ b/components/index.html
@@ -87,7 +87,7 @@
 				</div>
 			</article>
 		</section>
-<!--buttons and nav-->
+<!--buttons-->
 		<section class ="component_section">
 		<h2>Buttons</h2>
 
@@ -169,25 +169,26 @@
 							<li><a class="nav nav-menu" href="#!">routes</a></li>
 							<li><a class="nav nav-menu" href="#!">contact</a></li>
 						</ul>
-					</div>
-					<div class="nav-bar__language">
-						<ul class="nav-bar__language">
-							<li><a class="nav nav--active" href="#!">en</a></li>
-							<li><a class="nav" href="#!">ca</a></li>
-							<li><a class="nav" href="#!">es</a></li>
-							<li><a class="nav" href="#!">fr</a></li>
-							<li><a class="nav" href="#!">it</a></li>
-							<li><a class="nav" href="#!">de</a></li>
-						</ul>
+
+					<div class="nav__dropdown">
+						<a class="lang--active" href="#!">en</a>
 						<img 
 							class="dropbtn" 
-							src="dropbtn@2x.png"
-							srcset="dropbtn@2x.png 2x"
+							src="img/dropbtn@2x.png"
+							srcset="img/dropbtn@2x.png 2x"
 							alt="">
+						<div class="nav-bar__language">
+							<a class="lang" href="#!">ca</a>
+							<a class="lang" href="#!">es</a>
+							<a class="lang" href="#!">fr</a>
+							<a class="lang" href="#!">it</a>
+							<a class="lang" href="#!">de</a>
+						</div>
 					</div>
 					<div class="purchasebutton">
 						<a class="purchasebutton purchasebutton--nav" href="#!">Buy your articket</a>
 					</div>
+										</div>
 				</div>
 			</div>
 			</article>
