--- a/components/index.html
+++ b/components/index.html
@@ -132,15 +132,20 @@
 						src="img/nav-bar__language-list@2x.png" 
 						alt="nav-bar language list"/>
 				</div>
-				<div class="component__code">
-					<ul class="nav-bar__language">
-						<li><a class="nav nav--active" href="#!">en</a></li>
-						<li><a class="nav" href="#!">ca</a></li>
-						<li><a class="nav" href="#!">es</a></li>
-						<li><a class="nav" href="#!">fr</a></li>
-						<li><a class="nav" href="#!">it</a></li>
-						<li><a class="nav" href="#!">de</a></li>
-					</ul>
+				<div class="component__code nav__dropdown">
+					<a class="lang--active" href="#!">en</a>
+					<img 
+						class="dropbtn" 
+						src="img/dropbtn@2x.png"
+						srcset="img/dropbtn@2x.png 2x"
+						alt="">
+					<div class="nav-bar__language">
+						<a class="lang" href="#!">ca</a>
+						<a class="lang" href="#!">es</a>
+						<a class="lang" href="#!">fr</a>
+						<a class="lang" href="#!">it</a>
+						<a class="lang" href="#!">de</a>
+					</div>
 				</div>
 			</article>
 		</section>
@@ -170,25 +175,25 @@
 							<li><a class="nav nav-menu" href="#!">contact</a></li>
 						</ul>
 
-					<div class="nav__dropdown">
-						<a class="lang--active" href="#!">en</a>
-						<img 
-							class="dropbtn" 
-							src="img/dropbtn@2x.png"
-							srcset="img/dropbtn@2x.png 2x"
-							alt="">
-						<div class="nav-bar__language">
-							<a class="lang" href="#!">ca</a>
-							<a class="lang" href="#!">es</a>
-							<a class="lang" href="#!">fr</a>
-							<a class="lang" href="#!">it</a>
-							<a class="lang" href="#!">de</a>
+						<div class="nav__dropdown">
+							<a class="lang--active" href="#!">en</a>
+							<img 
+								class="dropbtn" 
+								src="img/dropbtn@2x.png"
+								srcset="img/dropbtn@2x.png 2x"
+								alt="">
+							<div class="nav-bar__language">
+								<a class="lang" href="#!">ca</a>
+								<a class="lang" href="#!">es</a>
+								<a class="lang" href="#!">fr</a>
+								<a class="lang" href="#!">it</a>
+								<a class="lang" href="#!">de</a>
+							</div>
+						</div>
+						<div class="purchasebutton">
+							<a class="purchasebutton purchasebutton--nav" href="#!">Buy your articket</a>
 						</div>
 					</div>
-					<div class="purchasebutton">
-						<a class="purchasebutton purchasebutton--nav" href="#!">Buy your articket</a>
-					</div>
-										</div>
 				</div>
 			</div>
 			</article>
@@ -207,12 +212,13 @@
 					<div class="component__code">
 						<ul class="featured_icons">
 							<li class="icon__card">
-								<div class="i"><img src="../img/icon-clock.svg"></div>
+								<div class="i"><img src="../img/icon-clock.svg" alt=""></div>
 								<div class="t"><p class="t">Skip</p>
 								<p class="t">the line</p>
 								</div>
 							</li>
 						</ul>
+					</div>
 				</article>
 
 				<article class="component">
