pass card added

--- a/components/index.html
+++ b/components/index.html
@@ -30,6 +30,7 @@
 			<h3 class="sidebar_heading">cards</h3>
 				<h5><a class="sidebar_item" href="#anchor_icon-card">icon card</a></h5>
 				<h5><a class="sidebar_item" href="#anchor_museum-card">museum card</a></h5>
+				<h5><a class="sidebar_item" href="#anchor_pass-card">pass card</a></h5>
 		</article>
 	</div>
 
@@ -236,6 +237,26 @@
 							alt="fundacio antoni tapies">
 						<h3 class="museum__name">FUNDACIÓ ANTONI TÀPIES</h3>
 						<p class="museum__summary">The Fundació Antoni Tàpies was established to promote knowledge of modern art and houses one of the most complete public collections of Antoni Tàpies’ work.</p>
+					</div>
+				</article>
+
+				<article class="component">
+					<h3 id="anchor_pass-card" class="component__name">pass card</h3>
+					<div class="component__img">
+						<img 
+							srcset="img/pass_card@2x.png 2x"
+							src="img/pass_card@2x.png"
+							alt="pass card"/>
+					</div>
+					<div class="component__code">
+						<h2 class="pass__heading">Meet <br>the Pass</h2>
+						<p class="pass__text">Discover the finest collection of Romanesque mural paintings in the world, enjoy Modernisme, and be surprised by the most contemporary art and creation. The universes of Miró, Picasso and Tàpies await you as you embark upon this unique experience – without queuing or waiting.</p>
+						<a class="purchasebutton purchasebutton--pass" href="#!">Buy your articket</a>
+						<div class="question-arrow">
+						<a class="questions" href="#!">
+						Questions? Check our FAQ</a>
+						<img src="img/arrow-right.svg" alt="">
+						</div>
 					</div>
 				</article>
 		</section>
