how-to pass added

--- a/components/index.html
+++ b/components/index.html
@@ -253,10 +253,31 @@
 						<p class="pass__text">Discover the finest collection of Romanesque mural paintings in the world, enjoy Modernisme, and be surprised by the most contemporary art and creation. The universes of Miró, Picasso and Tàpies await you as you embark upon this unique experience – without queuing or waiting.</p>
 						<a class="purchasebutton purchasebutton--pass" href="#!">Buy your articket</a>
 						<div class="question-arrow">
-						<a class="questions" href="#!">
-						Questions? Check our FAQ</a>
-						<img src="img/arrow-right.svg" alt="">
+							<a class="questions" href="#!">
+							Questions? Check our FAQ</a>
+							<img src="img/arrow-right.svg" alt="">
 						</div>
+					</div>
+				</article>
+
+				<article class="component">
+					<h3 id="anchor_how-card" class="component__name">pass card</h3>
+					<div class="component__img">
+						<img 
+							srcset="img/how__card@2x.png 1.5x"
+							src="img/how__card@2x.png"
+							alt="how card"/>
+					</div>
+					<div class="component__code">
+						<p class="how__step">01<p>
+						<div class="icon-arrow">
+							<img class="icon--purchase"
+								src="../img/how-it-works-1.svg"
+								alt="">
+							<img src="img/arrow-right.svg" alt="">
+						</div>
+						<h4 class="how__stepheader">Purchase your Articket in just a few clicks</h4>
+						<p class="how__stepsummary">You will receive a voucher in your email to print or save on your phone</p>
 					</div>
 				</article>
 		</section>
