added promotion card

--- a/components/index.html
+++ b/components/index.html
@@ -280,6 +280,31 @@
 						<p class="how__stepsummary">You will receive a voucher in your email to print or save on your phone</p>
 					</div>
 				</article>
+
+				<article class="component">
+					<h3 id="anchor_promotion-card" class="component__name">promotion card</h3>
+					<div class="component__img">
+						<img 
+							srcset="img/promotion-card@2x.png 2x"
+							src="img/promotion-card@2x.png"
+							alt="promotion card"/>
+					</div>
+					<div class="component__code">
+						<div class="promotioncard">
+							<div class="promotion--left">
+								<div class="promotion--header"><h2 class="promotion--header1">+100.000 artickets sold</h2><h2 class="promotion--header2">get yours!</h2></div>
+								<p class="promotion--subheader">save up to 45% with articket</p>
+							</div>
+							<div class="promotion--right">
+								<img 
+									src="../img/seal.png" 
+									srcset="../img/seal.png 2x"
+									alt="">
+								<a class="purchasebutton purchasebutton--promotion" href="#!">buy your articket</a>
+							</div>
+						</div>
+					</div>
+				</article>
 		</section>
 	</div>
 </body>
