finished card section

--- a/components/index.html
+++ b/components/index.html
@@ -31,6 +31,8 @@
 				<h5><a class="sidebar_item" href="#anchor_icon-card">icon card</a></h5>
 				<h5><a class="sidebar_item" href="#anchor_museum-card">museum card</a></h5>
 				<h5><a class="sidebar_item" href="#anchor_pass-card">pass card</a></h5>
+				<h5><a class="sidebar_item" href="#anchor_promotion-card">promotion card</a></h5>
+				<h5><a class="sidebar_item" href="#anchor_faq-card">faq card</a></h5>
 		</article>
 	</div>
 
@@ -303,6 +305,20 @@
 								<a class="purchasebutton purchasebutton--promotion" href="#!">buy your articket</a>
 							</div>
 						</div>
+					</div>
+				</article>
+
+				<article class="component">
+					<h3 id="anchor_faq-card" class="component__name">museum card</h3>
+					<div class="component__img">
+						<img 
+							srcset="img/section__faq--card@2x.png 1.5x"
+							src="img/section__faq--card@2x.png"
+							alt=" card"/>
+					</div>
+					<div class="component__code">
+						<h3 class="faq__q">Are there any discounts for young people, students, or pensioners?</h3>
+						<p class="faq__a">ArticketBCN does not have any discounts. It is a single price product that includes visits to six museums. If you visit them all, it works out cheaper than the total of every museum’s discounted prices for those groups.</p>
 					</div>
 				</article>
 		</section>
